--- a/registerPage.css
+++ b/registerPage.css
@@ -91,7 +91,7 @@ section .registerContentBox .registerFormBox .registerInputBox span {
 	font-size: 16px; 
 	margin-bottom: 5px;
 	display: inline-block;
-	color: purple:
+	color: purple;
 	font-weight: 300;
 	font-size: 16px;
 	letter-spacing: 1px; 
@@ -103,7 +103,7 @@ section .registerContentBox .registerFormBox .registerInputBox span {
 section .registerContentBox .registerFormBox .registerInputBox input {
 	
 	width: 110%;
-	padding: 5px; 20px;
+	padding: 5px 20px;
 	outline: none; 
 	font-weight: 400;
 	border: 2px solid black; 
@@ -135,7 +135,7 @@ section .registerContentBox .registerFormBox form .user-details .registerBioInpu
 section .registerContentBox .user-details .registerBioInputBox input {
 
     width: 120%;
-	padding: 10px; 30px;
+	padding: 10px 30px;
 	outline: none; 
 	font-weight: 400;
 	border: 2px solid black; 
@@ -149,7 +149,7 @@ section .registerContentBox .user-details .registerBioInputBox input {
 section .registerContentBox .registerFormBox .registerInputBox .combo {
 
     width: 110%;
-	padding: 10px; 30px;
+	padding: 10px 30px;
 	outline: none; 
 	font-weight: 400;
 	border: 2px solid black; 
@@ -185,7 +185,7 @@ section .registerContentBox .registerFormBox .registerInputBox input[type="submi
 section .registerContentBox .registerFormBox .registerInputBox a {
 
 		color: purple;
-		text-align: center: 
+		text-align: center;
 
 }
 
