--- a/style.css
+++ b/style.css
@@ -66,7 +66,15 @@
     width: 100%;
     height: 100%;
   }
-
+  #askQuestBtn{
+    background-color: #222;
+    color: #eaeaea;
+    display: inline-block;
+    width: 100%;
+  }
+  .askQuestBtn{
+    padding-top: 20px;
+  }
   #forumListingPageHeader{
     background-color: #d0b43c;
   }
