--- a/fileUpload.css
+++ b/fileUpload.css
@@ -7,7 +7,18 @@
 }
 
 #uploadFileBtn{
-    background-color: black;
+    background-color: #000000;
     padding-bottom: 2px;
-    color: whitesmoke;
+    color: #ffffff;
+}
+
+#frame{
+    background-color: #d3d3d3;
+    border-width: 3px;
+    border-color: #000000;
+}
+
+#submitBtn{
+    background-color: #000000;
+    color: #ffffff;
 }
